# chatgpt-discrod-client

./: README.md  pyproject.toml
chatgpt_discord/: __main__.py
